--- a/userChrome.css
+++ b/userChrome.css
@@ -1,20 +1,20 @@
 @import "./config/general_variables.css"; /**/
 @import "./config/color_variables.css"; /**/  /* <- default 'grey' colors */
-@import "./css/buttons/buttons_on_navbar_classic_appearance.css"; /**/
+/* @import "./css/buttons/buttons_on_navbar_classic_appearance.css"; /**/
 @import "./css/buttons/icons_colorized.css"; /**/
-@import "./css/buttons/buttons_on_bookmarks_toolbar_old_size_and_appearance.css"; /**/  /* Windows only */
+/* @import "./css/buttons/buttons_on_bookmarks_toolbar_old_size_and_appearance.css"; /**/  /* Windows only */
 @import "./css/buttons/bookmarks_menu_button_localized_label_on_bookmarks_toolbar.css"; /**/
 @import "./css/buttons/whatnew_button_always_hidden.css"; /**/
 @import "./css/appbutton/appbutton_popup_more_icons.css"; /**/
 @import "./css/appbutton/appbutton_popup_icons_colorized.css"; /**/
-@import "./css/appbutton/appbutton_in_titlebar_fx74.css"; /**/ /* <-- label only */
-@import "./css/appbutton/appbutton_in_titlebar_autocolor.css"; /**/
+/* @import "./css/appbutton/appbutton_in_titlebar_fx74.css"; /**/ /* <-- label only */
+/* @import "./css/appbutton/appbutton_in_titlebar_autocolor.css"; /**/
 @import "./css/tabs/classic_squared_tabs.css"; /**/
 @import "./css/tabs/missing_tab_favicon_restored_default.css"; /**/
 @import "./css/tabs/tab_close_always_visible.css"; /**/
 @import "./css/tabs/tab_icon_colors.css"; /**/
 @import "./css/generalui/private_mode_indicator_hidden.css"; /**/
-@import "./css/generalui/bookmark_icons_colorized.css"; /**/
+/* @import "./css/generalui/bookmark_icons_colorized.css"; /**/
 @import "./css/generalui/context_bfrsb_labels_without_icons.css"; /**/
 @import "./css/generalui/searchbar_glassplus_indicator_hidden.css"; /**/
 @import "./css/toolbars/toolbars_old_padding.css"; /**/
@@ -29,3 +29,46 @@
 @import "./css/locationbar/ac_popup_megabar_title_and_url_50percent_width.css"; /**/
 @import "./css/locationbar/ac_popup_megabar_compact_results.css"; /**/
 @import "./my_userChrome.css"; /**/
+
+
+/** additions **/
+
+@import "./css/tabs/tabs_below_navigation_toolbar_fx74_macOS.css"; /**/
+@import "./css/tabs/tab_icon_unloaded_tabs_lower_opacity.css"; /**/
+@import "./css/tabs/missing_tab_favicon_restored_brand_logo.css"; /**/
+@import "./css/tabs/tab_throbber_blue.css"; /**/
+@import "./css/toolbars/addonbar_move_bookmarks_toolbar_to_bottom_fx72.css"; /**/  /* <--- EXPERIMENTAL */
+@import "./css/toolbars/addonbar_content_on_the_right.css"; /**/  /* <--- EXPERIMENTAL */
+@import "./css/toolbars/addonbar_status_in_addonbar.css"; /**/  /* <--- EXPERIMENTAL */
+@import "./css/generalui/searchbar_popup_engines_show_labels_fx72.css"; /**/
+
+
+/** overrides **/
+
+/* tabs_below_navigation_toolbar_fx74_macOS.css */
+#main-window:not([chromehidden*="toolbar"]) #navigator-toolbox {
+  padding-bottom: calc(1px + var(--tab-min-height_tnot)) !important;
+}
+
+:root {
+/* addonbar_status_in_addonbar.css */
+  --status-width: 900px;
+
+/* config/color_variables.css */
+/*  --classic_squared_tabs_active_tab: linear-gradient(to top,#f9f9fa,#f9f9fa,#f9f9fa) !important; /* (to bottom,#FF8800,#FFCC99) */
+/*  --classic_squared_tabs_hovered_tabs: linear-gradient(to top,#cac7c1,#d5d2cc,#e8e6e2) !important; /* (to bottom,#FF9900,#FF6600) */
+/*  --classic_squared_tabs_other_tabs: linear-gradient(to top,#aeaba5,#c1beb7,#c9c6be) !important; /* (to bottom,#FFCC99,#CCCCCC) */
+/*  --classic_squared_tabs_unloaded_tabs: linear-gradient(to top,#aeaba5,#c1beb7,#c9c6be) !important; /* (to bottom,#FFCC99,#CCCCCC) */
+  --classic_squared_tabs_active_tab: linear-gradient(to top,#f9f9fa,#f9f9fa,#f9f9fa) !important; /* (to bottom,#FF8800,#FFCC99) */
+  --classic_squared_tabs_hovered_tabs: linear-gradient(to top,#f3f3f1,#f3f3f1,#f3f3f1) !important; /* (to bottom,#FF9900,#FF6600) */
+  --classic_squared_tabs_other_tabs: linear-gradient(to top,#c1beb7,#c1beb7,#c1beb7) !important; /* (to bottom,#FFCC99,#CCCCCC) */
+  --classic_squared_tabs_unloaded_tabs: linear-gradient(to top,#dcdad5,#dcdad5,#dcdad5) !important; /* (to bottom,#FFCC99,#CCCCCC) */
+}
+
+/* override button icon */
+#undo-close-tab-buttons-single_codefisher_org-browser-action{ list-style-image:  url("./icons/undo32.png") !important; }
+
+/* Enlarge Search Bar Suggestions */
+#PopupSearchAutoComplete .autocomplete-richlistbox {
+  font-size: 1.2em !important;
+}
